@@ -649,17 +649,6 @@ _initialize_interpreter (void)
 {
   struct cmd_list_element *c;
 
-  c = add_set_cmd ("interpreter", class_support,
-		   var_string,
-		   &interpreter_p, "Set the interpreter for gdb.", &setlist);
-  set_cmd_sfunc (c, set_interpreter_cmd);
-  set_cmd_completer (c, interpreter_completer);
-  add_show_from_set (c, &showlist);
-
-  add_cmd ("interpreters", class_support,
-	   list_interpreter_cmd,
-	   "List the interpreters currently available in gdb.", &infolist);
-
   c = add_cmd ("interpreter-exec", class_support,
 	       interpreter_exec_cmd,
 	       "Execute a command in an interpreter.  It takes two arguments:\n\
