@@ -1,3 +1,9 @@
+2002-08-13  Keith Seitz  <keiths@redhat.com>
+
+	* interps.c (_initialize_interpreter): Remove ability to set
+	the interpreter. This could really undermine MI clients.
+	* top.c (catcher): Don't worry about interpreter changes.
+
 2002-08-12  Keith Seitz  <keiths@redhat.com>
 
 	* interps.c (_initialize_interpreter): Add completer function
